# Restake-Regen

./: .gitmodules  LICENCE  README.md  install_poetry.sh  pitch_deck.md  pyproject.toml  run_validator_dashboard.sh
assets/figures/: emissions_per_validator.html  emissions_per_validator_epoch.html  emissions_per_validator_singleplot.html
assets/figures/carbon-workings/: eth_carbon_statistics.py  pyproject.toml
assets/noun_art/Londrina_Solid/: OFL.txt
carbon-workings/: eth_carbon_statistics.py
carbon-workings/figures/: emissions_per_validator.html
figures/: emissions_per_validator.html
figures/carbon-workings/: eth_carbon_statistics.py
