[tool.poetry]
name = "carbon-working"
version = "0.1.0"
description = ""
authors=["RestakeRegen <nacpittman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
plotly = "^5.22.0"
streamlit = "^1.34.0"
web3 = "^6.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
